modified html according to needs

--- a/index.html
+++ b/index.html
@@ -44,13 +44,11 @@
                 <hr style="margin: 10px 0">
 
                 <div class="all-todos">
-                    <ul id="ToDoUlNewToDo">
-                        
+                    <ul id="ToDoUlNewToDo" ondrop="drop(event)" ondragover="allowDrop(event)">
+
                         <li id="11" draggable="true" ondragstart="drag(event)">
-                            
-                            <p>Try to resolve the network issue as well as the 
-                                git commit for the further process and
-                                let me know the updates</p>
+
+                            <p>11</p>
                             <br>
 
                             <p>
@@ -61,9 +59,7 @@
                         </li>
 
                         <li id="12" draggable="true" ondragstart="drag(event)">
-                            <p>Try to resolve the network issue as well as t
-                                he git commit for the further process and
-                                let me know the updates</p>
+                            <p>12</p>
 
                             <br>
 
@@ -96,11 +92,9 @@
 
                 <div class="all-todos">
 
-                    <ul id="ToDoUlInProgress">
+                    <ul id="ToDoUlInProgress" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <li id="21" draggable="true" ondragstart="drag(event)">
-                            <p>Try to resolve the network issue as well as 
-                                the git commit for the further process and
-                                let me know the updates</p>
+                            <p>21</p>
                             <br>
 
                             <p>
@@ -110,9 +104,7 @@
                         </li>
 
                         <li id="22" draggable="true" ondragstart="drag(event)">
-                            <p>Try to resolve the network issue as well as 
-                                the git commit for the further process and
-                                let me know the updates</p>
+                            <p>22</p>
                             <br>
 
                             <p>
@@ -143,11 +135,9 @@
                 <hr style="margin: 10px 0">
 
                 <div class="all-todos">
-                    <ul id="ToDoUlDone">
+                    <ul id="ToDoUlDone" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <li id="31" draggable="true" ondragstart="drag(event)">
-                            <p>Try to resolve the network issue as well as the git
-                                commit for the further process and
-                                let me know the updates</p>
+                            <p>31</p>
 
                             <br>
 
@@ -158,9 +148,7 @@
                         </li>
 
                         <li id="32" draggable="true" ondragstart="drag(event)">
-                            <p>Try to resolve the network issue as well as the 
-                                git commit for the further process and
-                                let me know the updates</p>
+                            <p>32</p>
 
                             <br>
 
