formatted according clients need

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <section id="InProgress">
                 <header>
 
-                    <span class='header'> To Do List </span>
+                    <span class='header'> In Work </span>
 
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary in-progress-task" data-toggle="modal" data-target="#myModal">
@@ -123,7 +123,7 @@
             <section id="InProgress">
                 <header>
 
-                    <span class='header'> To Do List </span>
+                    <span class='header'> Done </span>
 
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary done-task" data-toggle="modal" data-target="#myModal">
