--- a/index.html
+++ b/index.html
@@ -48,23 +48,47 @@
 
                         <li id="11" draggable="true" ondragstart="drag(event)">
 
-                            <p>11</p>
+                            <p>Check signin email sending issue</p>
                             <br>
 
                             <p>
-                                <span class="icon user"> </i> Imdad Hossain</span>
-                                <span class="icon timer"> </i> 2 min ago</span>
+                                <span class="icon user"> </i> John</span>
+                                <span class="icon timer"> </i> 2 days ago</span>
                             </p>
 
                         </li>
 
                         <li id="12" draggable="true" ondragstart="drag(event)">
-                            <p>12</p>
+                            <p>User will login through ldap</p>
+
+                            <br>
+
+                            <p>
+                                <span class='name icon user'> </i> Mark </span>
+                                <span class="timer icon timer"></i> 1 day ago</span>
+                            </p>
+                        </li>
+                        </li>
+
+                        <li id="13" draggable="true" ondragstart="drag(event)">
+                            <p>Admin will be able to create user</p>
 
                             <br>
 
                             <p>
                                 <span class='name icon user'> </i> Imdad Hossain</span>
+                                <span class="timer icon timer"> </i> 15 min ago</span>
+                            </p>
+                        </li>
+                        </li>
+
+                        <li id="14" draggable="true" ondragstart="drag(event)">
+                            <p>Mobile verification needed</p>
+
+                            <br>
+
+                            <p>
+                                <span class='name icon user'> </i>Al Amin</span>
                                 <span class="timer icon timer"> </i> 2 min ago</span>
                             </p>
                         </li>
@@ -94,22 +118,22 @@
 
                     <ul id="ToDoUlInProgress" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <li id="21" draggable="true" ondragstart="drag(event)">
-                            <p>21</p>
+                            <p>Email confirmation is not working as expected</p>
                             <br>
 
                             <p>
                                 <span class="icon user"> </i> Imdad Hossain</span>
-                                <span class="icon timer"> </i> 2 min ago</span>
+                                <span class="icon timer"> </i> 13 hours ago</span>
                             </p>
                         </li>
 
                         <li id="22" draggable="true" ondragstart="drag(event)">
-                            <p>22</p>
+                            <p>User want to see the sales report details</p>
                             <br>
 
                             <p>
-                                <span class='name icon user'> </i> Imdad Hossain</span>
-                                <span class="timer icon timer"> </i> 2 min ago</span>
+                                <span class='name icon user'> </i> Sohag</span>
+                                <span class="timer icon timer"> </i> 25 mins ago</span>
                             </p>
                         </li>
                     </ul>
@@ -137,18 +161,18 @@
                 <div class="all-todos">
                     <ul id="ToDoUlDone" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <li id="31" draggable="true" ondragstart="drag(event)">
-                            <p>31</p>
+                            <p>Doctor can be aligned or unaligned according to needs ( role specific )</p>
 
                             <br>
 
                             <p>
-                                <span class="icon user"> </i> Imdad Hossain</span>
-                                <span class="icon timer"> </i> 2 min ago</span>
+                                <span class="icon user"> </i> Ibrahim Khalil</span>
+                                <span class="icon timer"> </i> 7 mins ago</span>
                             </p>
                         </li>
 
                         <li id="32" draggable="true" ondragstart="drag(event)">
-                            <p>32</p>
+                            <p>Admin can cancel the subscription</p>
 
                             <br>
 
